[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://gfx/HpBarProgress.png" type="Texture" id=3]
[ext_resource path="res://gfx/HpBarUnder.png" type="Texture" id=4]
[ext_resource path="res://gfx/outlineCrystal.png" type="Texture" id=5]
[ext_resource path="res://gfx/HpBarOver.png" type="Texture" id=6]
[ext_resource path="res://scenes/animated_sprite_blue.tscn" type="PackedScene" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, -2.19298, 0, 0, Vector2( 1, 0.0206709 ), -1.6697, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=2]
height = 34.5166

[sub_resource type="Animation" id=3]
resource_name = "immute"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.423529 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.423529 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.423529 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.423529 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.423529 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D"]
collision/safe_margin = 0.01
script = ExtResource( 1 )
bullet_scene = ExtResource( 2 )

[node name="particles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 17 )
emitting = false
amount = 10
local_coords = false
texture = ExtResource( 5 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 80.0
scale_amount = 0.5
scale_amount_curve = SubResource( 1 )

[node name="player_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="animated_sprite" parent="." instance=ExtResource( 8 )]

[node name="hit_box" type="Area2D" parent="."]

[node name="hit_box_shape" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 2 )

[node name="shoot_position" type="Position2D" parent="."]
position = Vector2( 20, 7 )

[node name="hp_bar" type="TextureProgress" parent="."]
margin_left = -20.0
margin_top = -38.0
margin_right = 180.0
margin_bottom = 2.0
rect_scale = Vector2( 0.2, 0.2 )
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="immute_animation" type="AnimationPlayer" parent="."]
anims/immute = SubResource( 3 )
